--- a/app/src/main/res/layout/edit_text_layout.xml
+++ b/app/src/main/res/layout/edit_text_layout.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_a_text"
+        android:textColor="@android:color/secondary_text_dark"
         android:id="@+id/et_editText"
         android:textSize="16sp"
         android:layout_marginHorizontal="20dp"/>
